--- a/gender_violence_terms.ipynb
+++ b/gender_violence_terms.ipynb
@@ -151,7 +151,7 @@
     "            text[i]=text[i].replace('\\n','')\n",
     "            text[i]=text[i].replace('\\g','')\n",
     "            text[i]=text[i].replace('  ',' ')\n",
-    "            t=nlp(text[i].lower())\n",
+    "            t=nlp(text[i])\n",
     "            [token.text for token in t if not token.is_punct and token.is_alpha]\n",
     "            result.append(' '.join(list(t1)))\n",
     "    return result"
